--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.7.0
+black==24.4.2
 blinker==1.8.2
 blis==0.7.11
 catalogue==2.0.10
@@ -9,9 +10,11 @@ cloudpathlib==0.16.0
 confection==0.1.4
 cymem==2.0.8
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+exceptiongroup==1.2.1
 Flask==3.0.3
 idna==3.7
 importlib_metadata==7.1.0
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 langcodes==3.4.0
@@ -19,13 +22,18 @@ language_data==1.2.0
 marisa-trie==1.1.1
 MarkupSafe==2.1.5
 murmurhash==1.0.10
+mypy-extensions==1.0.0
 numpy==1.26.4
 packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.2
+pluggy==1.5.0
 praw==7.7.1
 prawcore==2.4.0
 preshed==3.0.9
 pydantic==2.7.1
 pydantic_core==2.18.2
+pytest==8.2.1
 requests==2.32.2
 smart-open==6.4.0
 spacy==3.7.4
@@ -33,6 +41,7 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
 thinc==8.2.3
+tomli==2.0.1
 tqdm==4.66.4
 typer==0.9.4
 typing_extensions==4.11.0
