--- a/requirements.txt
+++ b/requirements.txt
@@ -8,24 +8,32 @@ charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.16.0
 confection==0.1.4
+contourpy==1.2.1
+cycler==0.12.1
 cymem==2.0.8
+en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl#sha256=6a0f857a2b4d219c6fa17d455f82430b365bf53171a2d919b9376e5dc9be032e
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 exceptiongroup==1.2.1
 Flask==3.0.3
+fonttools==4.51.0
 idna==3.7
 importlib_metadata==7.1.0
+importlib_resources==6.4.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+kiwisolver==1.4.5
 langcodes==3.4.0
 language_data==1.2.0
 marisa-trie==1.1.1
 MarkupSafe==2.1.5
+matplotlib==3.9.0
 murmurhash==1.0.10
 mypy-extensions==1.0.0
 numpy==1.26.4
 packaging==24.0
 pathspec==0.12.1
+pillow==10.3.0
 platformdirs==4.2.2
 pluggy==1.5.0
 praw==7.7.1
@@ -33,8 +41,11 @@ prawcore==2.4.0
 preshed==3.0.9
 pydantic==2.7.1
 pydantic_core==2.18.2
+pyparsing==3.1.2
 pytest==8.2.1
+python-dateutil==2.9.0.post0
 requests==2.32.2
+six==1.16.0
 smart-open==6.4.0
 spacy==3.7.4
 spacy-legacy==3.0.12
