--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 annotated-types==0.7.0
+appnope==0.1.4
+asttokens==2.4.1
 black==24.4.2
 blinker==1.8.2
 blis==0.7.11
@@ -7,43 +9,62 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.16.0
+comm==0.2.2
 confection==0.1.4
 contourpy==1.2.1
 cycler==0.12.1
 cymem==2.0.8
+debugpy==1.8.1
+decorator==5.1.1
 en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl#sha256=6a0f857a2b4d219c6fa17d455f82430b365bf53171a2d919b9376e5dc9be032e
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 exceptiongroup==1.2.1
+executing==2.0.1
 Flask==3.0.3
 fonttools==4.51.0
 idna==3.7
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
 iniconfig==2.0.0
+ipykernel==6.29.4
+ipython==8.18.1
 itsdangerous==2.2.0
+jedi==0.19.1
 Jinja2==3.1.4
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 kiwisolver==1.4.5
 langcodes==3.4.0
 language_data==1.2.0
 marisa-trie==1.1.1
 MarkupSafe==2.1.5
 matplotlib==3.9.0
+matplotlib-inline==0.1.7
 murmurhash==1.0.10
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 numpy==1.26.4
 packaging==24.0
+parso==0.8.4
 pathspec==0.12.1
+pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.2
 pluggy==1.5.0
 praw==7.7.1
 prawcore==2.4.0
 preshed==3.0.9
+prompt_toolkit==3.0.47
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pydantic==2.7.1
 pydantic_core==2.18.2
+Pygments==2.18.0
 pyparsing==3.1.2
 pytest==8.2.1
 python-dateutil==2.9.0.post0
+pyzmq==26.0.3
 requests==2.32.2
 six==1.16.0
 smart-open==6.4.0
@@ -51,15 +72,20 @@ spacy==3.7.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
+stack-data==0.6.3
+tabulate==0.9.0
 thinc==8.2.3
 tomli==2.0.1
+tornado==6.4.1
 tqdm==4.66.4
+traitlets==5.14.3
 typer==0.9.4
 typing_extensions==4.11.0
 update-checker==0.18.0
 urllib3==2.2.1
 vaderSentiment==3.3.2
 wasabi==1.1.2
+wcwidth==0.2.13
 weasel==0.3.4
 websocket-client==1.8.0
 Werkzeug==3.0.3
